transaction/.scripts/kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: #{service_name}#-deployment
  namespace: ny-ezpass-#{environment}#
spec:
  selector:
    matchLabels:
      app: #{service_name}#
  replicas: #{replicas}#
  strategy: 
    type: RollingUpdate
    rollingUpdate: 
      maxSurge: 1
      maxUnavailable: 1
  template:
    metadata:
      labels:
        app: #{service_name}#
    spec:
      containers:
      - name: #{service_name}#
        image: #{acr_login_server}#/#{service_name}#:#{Build.BuildId}#
        resources:
          requests:
            cpu: 15m
            memory: 2282M
        ports:
        - containerPort: 8080
            ### health probe
        readinessProbe:
          httpGet:
            path: /actuator
            port: 8080
          initialDelaySeconds: 5
          periodSeconds: 5
          timeoutSeconds: 5
        livenessProbe:
          httpGet:
            path: /actuator
            port: 8080
          initialDelaySeconds: 5
          periodSeconds: 5
          timeoutSeconds: 5
        startupProbe:
          httpGet:
            path: /actuator
            port: 8080
          initialDelaySeconds: 90
          failureThreshold: 3
          periodSeconds: 5
          timeoutSeconds: 10
        volumeMounts:
        - name: afs-vol
          mountPath: "#{nfs_mount_path}#"
        - name: service-config-vol
          mountPath: /usr/local/lib/applicationinsights.json
          subPath: applicationinsights.json
      volumes:
      - name: afs-vol
        nfs:
          server: #{nfs_name}#.file.core.windows.net
          path: "/#{nfs_name}#/fileshare"
      - name: service-config-vol
        configMap:
          name: #{service_name}#-config
          items:
            - key: applicationinsights.json
              path: applicationinsights.json
