transaction/.scripts/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: #{old_service_name}#
  namespace: ny-ezpass-#{environment}#
  labels:
    prometheus-monitoring: "true"
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: #{service_name}#
